# project-sigma

./: CNAME  index.html  package-lock.json  package.json  readme.md
assets/: index-0TyRqxT8.js  index-1h_4q-ZZ.js  index-6GAxfBJN.js  index-B06toQV3.js  index-B1OW0olC.js  index-B9VBNiCr.js  index-BZIF3hHS.js  index-Bi8j0iiI.css  index-BrJYeuvO.js  index-BwYrkEV4.js  index-ByshwUvy.css  index-C4bJiEmV.js  index-C6BzaeYK.js  index-C6Q0cB4m.js  index-C8_wLMyT.js  index-CGDKUyAQ.js  index-CIoQbv_D.js  index-CQBkXptq.js  index-Ccqy4-9a.js  index-ChqO8aHq.js  index-Ck7qEZJ8.js  index-CmHBsRkZ.css  index-CqWc7n9T.js  index-CvLT-gN_.js  index-CyKmBP_a.js  index-D4pynbJr.js  index-D58KGd36.css  index-D7TJSsde.js  index-DAyPU_-E.js  index-DExRYTem.css  index-DN9MEOEX.css  index-DOrGzrC3.js  index-DTSPV6ZX.css  index-DWW7fvqu.js  index-Dw0rKvGE.js  index-DxNGBUkm.css  index-DzPlhP9w.css  index-Ii1zuzaA.css  index-LPcvqmf-.js  index-Qy6_oHXS.css  (+2 more)
backend/: db.sqlite3  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_rectcard_color_alter_rectcard_description_and_more.py
backend/config/: settings.py  urls.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  AppRoot.tsx  index.css  main.tsx  router.tsx  supabase-client.ts
frontend/src/components/: ArrowLayer.tsx  ArrowShape.tsx  BottomNav.tsx  CalendarComponent.tsx  (+17 more)
(+36 files in other folders)
